--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       		<div >
         		<div id="logo">
         		</div>
-        		<div >
-        			<img src="imagenes/imagenes-circulos.png" width="677" height="302" onload="MM_openBrWindow('pop up.html','','width=350,height=350');MM_effectAppearFade(this, 3000, 0, 100, true)" /> 
+        		<div class="row" >
+        			<img class="responsive" src="imagenes/imagenes-circulos.png" width="677" height="300" onload="MM_openBrWindow('pop up.html','','width=350,height=350');MM_effectAppearFade(this, 3000, 0, 100, true)" /> 
         		</div>
     		</div>
     	</div>
